--- a/templates/login.html
+++ b/templates/login.html
@@ -2,16 +2,15 @@
 {% block content %}
 <h1 class="mb-4">Admin Login</h1>
 
-<form method="post" action="{{ url_for('login', next=next_url) }}" class="col-md-6">
+<form method="post" action="{{ url_for('login', next=next_url) }}">
   <div class="mb-3">
     <label class="form-label">Username</label>
-    <input class="form-control" name="username" autocomplete="username">
+    <input class="form-control" name="username" autocomplete="username" required>
   </div>
   <div class="mb-3">
     <label class="form-label">Password</label>
-    <input class="form-control" name="password" type="password" autocomplete="current-password">
+    <input class="form-control" name="password" type="password" autocomplete="current-password" required>
   </div>
   <button class="btn btn-primary" type="submit">Login</button>
 </form>
 {% endblock %}
-``
