--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-<h1 class="mb-4">Admin Login</h1>
+<h1 class="mb-4">{{ _('Admin Login') }}</h1>
 
-<form method="post" action="{{ url_for('login', next=next_url) }}">
+<form method="post" action="{{ url_for('login', next=next_url) }}" class="col-md-6 col-lg-4">
   <div class="mb-3">
-    <label class="form-label">Username</label>
+    <label class="form-label">{{ _('Username') }}</label>
     <input class="form-control" name="username" autocomplete="username" required>
   </div>
   <div class="mb-3">
-    <label class="form-label">Password</label>
+    <label class="form-label">{{ _('Password') }}</label>
     <input class="form-control" name="password" type="password" autocomplete="current-password" required>
   </div>
   <button class="btn btn-primary" type="submit">Login</button>
